[#12] Try Maven options for unit-test